# asustor-prometheus

./: .answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  control  pyproject.toml
.gitlab/ci/: core.yml  pages.yml  pre-commit.yml  python.yml  releases.yml  stages.yml  workflow.yml
apk/: conf  env
apk/CONTROL/: changelog.txt  common.sh  config.json  description.txt  post-install.sh  pre-uninstall.sh  start-hook.sh  start-stop.sh
apk/conf.dist/: .env  README.md  env  prometheus.sample.yml  prometheus.yml  web.yml
apk/conf.dist/alerts.d/: README.md  node-explorer.yml  prometheus.yml
apk/conf.dist/deps.d/apache/sites-available/: prometheus.conf
apk/conf.dist/deps.d/certbot/renewal-hooks/deploy/: 10-prometheus
apk/conf.dist/deps.d/persistence/: hosts
apk/conf.dist/file_sd_configs.d/: prometheus.yml
apk/conf.dist/hosts.d/: prometheus.example.com
apk/conf.dist/jobs.d/: README.md  blackbox-exporter.yml  blackbox-http.yml  blackbox-ping.yml  blackbox-ssh.yml  grafana.yml  node-exporter.yml  prometheus.yml
apk/conf.dist/jobs.d/blackbox-exporter.d/: blackbox.example.com.yml
apk/conf.dist/jobs.d/blackbox-http.d/: target.example.com.yml
apk/conf.dist/jobs.d/blackbox-ping.d/: target.example.com.yml
apk/conf.dist/jobs.d/blackbox-ssh.d/: target.example.com.yml
apk/conf.dist/jobs.d/grafana.d/: grafana-http.yml  grafana-https.yml  grafana.example.com.yml
apk/conf.dist/jobs.d/node-exporter.d/: nas.example.com.yml
apk/conf.dist/jobs.d/prometheus.d/: prometheus.example.com.yml  prometheus.yml
apk/conf.dist/scrape_config_files.d/: prometheus.yml
apk/deps.d/certbot/renewal-hooks/deploy/: 10-prometheus
apk/prometheus.dist/alerts.d/: README.md  prometheus.yml
apk/renewal-hooks.dist/deploy/: 10-prometheus  prometheus
apk/renewal-hooks/deploy/: prometheus
apk/sites-available.dist/: prometheus.conf
apk/webman/: prometheus.cgi  prometheus.css  prometheus.js
apk/webman/langs/: lang-en-US.js
support/: apk.mk  apkg.py  help.mk  precommit.mk  upload.sh
