# Project metadata guidelines:
#   https://peps.python.org/pep-0621/
#
# ------------------------------------------------------------------------------
# Setup
# ------------------------------------------------------------------------------
[project]
dynamic = ["dependencies"]

name = "cappysan-prometheus"
version = "3.12.0-r36"
authors = [
  {name = "Julien Lecomte", email = "julien@cappysan.dev"}
]
readme  = "README.md"
description = "Asustor Prometheus application"
license = "MIT"


[project.urls]
Homepage = "https://gitlab.com/cappysan/asustor/prometheus"

# ------------------------------------------------------------------------------
# Other tools
# ------------------------------------------------------------------------------
[tool.bumpversion]
current_version = "3.12.0-r36"

parse = """(?x)
  (?P<major>0|[1-9]\\d*)\\.
  (?P<minor>0|[1-9]\\d*)\\.
  (?P<patch>0|[1-9]\\d*)
  -r(?P<rev>0|[1-9]\\d*)
"""
serialize = [ "{major}.{minor}.{patch}-r{rev}" ]

search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = true
tag_name = "{new_version}"
tag_message = "Bump version from {current_version} to {new_version}"
allow_dirty = false
commit = true
message = "Release version {new_version} (previous: {current_version})"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = [

  "precommit autoupdate",

  "make pc",
]
post_commit_hooks = []

[tool.bumpversion.parts.rev]
first_value = "1"


[[tool.bumpversion.files]]
filename = ".answers.yml"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "apk/CONTROL/config.json"


[tool.codespell]
# https://github.com/codespell-project/codespell/blob/main/README.rst
#
# Dictionary is updated when codespell is updated, nevertheless, it can
# be found here: .venv/lib/python3.*/site-packages/codespell_lib/data/dictionary.txt
skip = "*.pyc,.cache,.git,.tox,.venv,public"
builtin = "clear,informal,rare,names"
ignore-words = "support/codespell.exclude"
ignore-multiline-regex = "# codespell: off\n.*# codespell: on\n"
check-filenames = ""
